logs/cgp-django-core.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/base_account'...
Listing './lib/python3.5/site-packages/base_media'...
Compiling './lib/python3.5/site-packages/base_media/forms.py'...
***   File "./lib/python3.5/site-packages/base_media/forms.py", line 254
    print 'Set password: %s'%(password)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/base_media/models.py'...
***   File "./lib/python3.5/site-packages/base_media/models.py", line 670
    print 'Error making file private: %s'%(traceback.format_exc())
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/base_media/views.py'...
***   File "./lib/python3.5/site-packages/base_media/views.py", line 344
    print "Return variant for %s"%(variant)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/base_page'...
Compiling './lib/python3.5/site-packages/base_page/models.py'...
***   File "./lib/python3.5/site-packages/base_page/models.py", line 291
    print 'item doesnt have sitemap priority, but it does have default: %s'%(self.default_sitemap_priority)
                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/base_page/views.py'...
***   File "./lib/python3.5/site-packages/base_page/views.py", line 117
    print "URL NOT FOUND. 1 - Try Media App"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cgp_django_core-0.20.egg-info'...
Listing './lib/python3.5/site-packages/form'...
Listing './lib/python3.5/site-packages/monomail'...
Compiling './lib/python3.5/site-packages/monomail/utils.py'...
***   File "./lib/python3.5/site-packages/monomail/utils.py", line 86
    except BaseException, error:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sharing'...
Listing './lib/python3.5/site-packages/site_admin'...
Compiling './lib/python3.5/site-packages/site_admin/admin.py'...
***   File "./lib/python3.5/site-packages/site_admin/admin.py", line 35
    print count
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/site_admin/forms.py'...
***   File "./lib/python3.5/site-packages/site_admin/forms.py", line 131
    print 'Set password: %s'%(password)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/site_admin/middleware.py'...
***   File "./lib/python3.5/site-packages/site_admin/middleware.py", line 125
    except django.template.TemplateDoesNotExist, e:
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/site_admin/models.py'...
***   File "./lib/python3.5/site-packages/site_admin/models.py", line 108
    print "ERROR RETRIEVING ABSOLUTE URL From %s"%(self.content_object)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/site_admin/views.py'...
***   File "./lib/python3.5/site-packages/site_admin/views.py", line 46
    print "Get legacy url for %s"%(path)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tracking'...
Listing './share'...
Listing './share/python-wheels'...
